# liquidmeta

./: .gitignore  Lambda1.hs  PropTest.hs  README.md  STLC.hs  TestLambda.hs  Testy.hs
.circleci/: config.yml
Lambda1/: BareTyping.hs  BasicLemmas.hs  BasicLemmas2.hs  BasicProps.hs  Basics.hs  DenotationalSoundness.hs  Environments.hs  MainTheorems.hs  Primitives.hs  Primitives2a.hs  Primitives2b.hs  Primitives2c.hs  Primitives2d.hs  Primitives2e.hs  Primitives3.hs  Primitives5.hs  STLCLemmas.hs  STLCSoundness.hs  Semantics.hs  Substitution.hs  Syntax.hs  TechLemmas.hs  TechLemmas2.hs  Typing.hs  WellFormedness.hs
Lambda1.1/: BasicProps.hs  BasicPropsCSubst.hs  BasicPropsDenotes.hs  BasicPropsEnvironments.hs  BasicPropsSubstitution.hs  BasicPropsWellFormedness.hs  Basics.hs  DenotationsSelfify.hs  DenotationsSoundness.hs  Entailments.hs  LemmasChangeVarTyp.hs  LemmasChangeVarWFEnv.hs  LemmasExactness.hs  LemmasNarrowingEnt.hs  LemmasNarrowingTyp.hs  LemmasSubtypeClosed.hs  LemmasSubtyping.hs  LemmasTyping.hs  LemmasWeakenTyp.hs  MainTheorems.hs  PrimSemantics.hs  PrimitiveDenotationsAnd.hs  PrimitiveDenotationsEq.hs  PrimitiveDenotationsEqv.hs  PrimitiveDenotationsLeq.hs  PrimitiveDenotationsOr.hs  Primitives.hs  Primitives4.hs  PrimitivesDeltaTyping.hs  PrimitivesDenotations.hs  PrimitivesDenotationsEq.hs  PrimitivesDenotationsEqv.hs  PrimitivesRefinements.hs  PrimitivesSemantics.hs  PrimitivesWFTypeEq.hs  PrimitivesWFTypeEqv.hs  STLCLemmas.hs  STLCSoundness.hs  Semantics.hs  SubstitutionLemmaEnt.hs  (+9 more)
Lambda2.1/: BasicPropsCSubst.hs  BasicPropsDenotes.hs  BasicPropsEnvironments.hs  BasicPropsEraseTyping.hs  BasicPropsSubstitution.hs  BasicPropsWellFormedness.hs  Basics.hs  BasicsTest.hs  DenotatationsLemmas.hs  DenotationsSelfify.hs  DenotationsSoundness.hs  DenotationsSoundnessSub.hs  DenotationsSoundnessTyp.hs  Entailments.hs  EntailmentsExBackup.hs  EntailmentsExtra.hs  EntailmentsExtra2.hs  EntailmentsOld.hs  Implications.hs  LemmasChangeVarEnt.hs  LemmasChangeVarTyp.hs  LemmasChangeVarWF.hs  LemmasChangeVarWFEnv.hs  LemmasExactness.hs  LemmasExactness0.hs  LemmasInvertLambda.hs  LemmasNarrowingEnt.hs  LemmasNarrowingTyp.hs  LemmasSubtypeClosed.hs  LemmasSubtyping.hs  LemmasTransitive.hs  LemmasTyping.hs  LemmasWeakenEnt.hs  LemmasWeakenTyp.hs  LemmasWeakenTypTV.hs  LemmasWeakenWF.hs  LemmasWeakenWF2.hs  LemmasWeakenWF3.hs  LemmasWeakenWFTV.hs  LemmasWellFormedness.hs  (+59 more)
Lambda2.2/: BasicPropsCSubst.hs  BasicPropsDenotes.hs  BasicPropsEnvironments.hs  BasicPropsSubstitution.hs  BasicPropsWellFormedness.hs  Basics.hs  DenotationsSoundness.hs  DenotationsSoundnessSBase.hs  Entailments.hs  EntailmentsExtra.hs  (+55 more)
Lambda3.0/: liquidmeta.cabal  stack.yaml
Lambda3.0/oldsrc/: SubstitutionLemmaTypTV.hs  SystemFLemmasSubstitution.hs  WellFormedness.hs
Lambda3.0/poplsrc/: BasicPropsEnvironments.hs  SystemFLemmasSubstitution.hs  Typing.hs
Lambda3.0/src/: Basics.hs  LocalClosure.hs  Semantics.hs  SystemFTyping.hs  SystemFWellFormedness.hs
icfp22-revised/: liquidmeta.cabal  stack.yaml
icfp22-revised/src/: BasicPropsSubstitution.hs  BasicPropsWellFormedness.hs  Basics.hs  LemmasExactness.hs  LemmasExactnessSubst.hs  LemmasInversion.hs  LemmasNarrowingTyp.hs  LemmasSubtyping.hs  LemmasTransitive.hs  LemmasTyping.hs  LemmasWeakenTyp.hs  LemmasWeakenTypTV.hs  LemmasWeakenWF.hs  LemmasWeakenWFTV.hs  LemmasWellFormedness.hs  LocalClosure.hs  MainTheorems.hs  PrimitivesDeltaTyping.hs  PrimitivesFTyping.hs  PrimitivesWFType.hs  Semantics.hs  SubstitutionLemmaTyp.hs  SubstitutionLemmaTypTV.hs  SubstitutionLemmaWF.hs  SubstitutionLemmaWFTV.hs  SystemFLemmasWeaken.hs  SystemFLemmasWellFormedness.hs  SystemFSoundness.hs  SystemFTyping.hs  Test.hs  Typing.hs
icfp22-submission/: README.md  liquidmeta.cabal
icfp22-submission/src/: Basics.hs  LemmasExactness.hs  LemmasInversion.hs  LemmasSubtyping.hs  Strengthenings.hs  SubstitutionLemmaTypTV.hs  SubstitutionLemmaWF.hs
(+526 files in other folders)
