cabal-version: 1.12

name:           liquidmeta
version:        3.0.0
build-type:     Simple

library
  exposed-modules:
      Basics,
    , Strengthenings
    , LocalClosure
    , Semantics
    , SystemFWellFormedness
    , SystemFTyping
    , BasicPropsSubstitution
    , PrimitivesFTyping
    , BasicPropsEnvironments
    , WellFormedness
    , BasicPropsWellFormedness
    , SystemFLemmasWellFormedness
    , SystemFLemmasWeaken
    , SystemFLemmasSubstitution
    , SystemFSoundness
    , LemmasWeakenWF
    , LemmasWeakenWFTV
    , Typing
    , LemmasWellFormedness
    , SubstitutionLemmaWF
    , SubstitutionLemmaWFTV
    , LemmasTyping
    , LemmasWeakenTyp
    , LemmasWeakenTypTV
    , LemmasSubtyping
    , LemmasExactness
    , LemmasExactnessSubst
    , SubstitutionLemmaTyp
    , SubstitutionLemmaTypTV
    , LemmasNarrowingTyp
    , LemmasTransitive
    , LemmasInversion
    , PrimitivesWFType
    , PrimitivesDeltaTyping
    , MainTheorems
  hs-source-dirs:
      src
  ghc-options:  -fplugin=LiquidHaskell 
                -fplugin-opt=LiquidHaskell:--ple-with-undecided-guards
  build-depends:
      liquid-base
    , liquid-containers
    , liquid-prelude
    , liquidhaskell
    , rest-rewrite
  default-language: Haskell2010
